# HPC-X-AEROSPACE-MODULE-1

./: .TridiagMat.hpp.swp  .gitignore  CMakeLists.txt  DirectionSplitting.md  Doxyfile  LICENSE  README.md  SchurComplement.md  build.sh  run.sh  test.sh  thomas.cpp  validation.py
.github/workflows/: ci-and-deploy.yml
data/: config.json  configFunctions.hpp
docs/: index.html
docs/html/: Fields_8cpp.html  Fields_8cpp__incl.map  Fields_8cpp__incl.md5  Fields_8hpp.html  Fields_8hpp__dep__incl.map  Fields_8hpp__dep__incl.md5  Fields_8hpp__incl.map  Fields_8hpp__incl.md5  Fields_8hpp_source.html  Grid_8cpp.html  Grid_8cpp__incl.map  Grid_8cpp__incl.md5  Grid_8hpp.html  Grid_8hpp__dep__incl.map  Grid_8hpp__dep__incl.md5  Grid_8hpp__incl.map  Grid_8hpp__incl.md5  Grid_8hpp_source.html  LinearSys_8cpp.html  LinearSys_8cpp__incl.map  LinearSys_8cpp__incl.md5  LinearSys_8hpp.html  LinearSys_8hpp__dep__incl.map  LinearSys_8hpp__dep__incl.md5  LinearSys_8hpp__incl.map  LinearSys_8hpp__incl.md5  LinearSys_8hpp_source.html  MpiEnv_8cpp.html  MpiEnv_8cpp__incl.map  MpiEnv_8cpp__incl.md5  MpiEnv_8hpp.html  MpiEnv_8hpp__dep__incl.map  MpiEnv_8hpp__dep__incl.md5  MpiEnv_8hpp__incl.map  MpiEnv_8hpp__incl.md5  MpiEnv_8hpp_source.html  NSBSolver_8cpp.html  NSBSolver_8cpp__incl.map  NSBSolver_8cpp__incl.md5  NSBSolver_8hpp.html  (+2251 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+124 more)
docs/latex/: Fields_8cpp.tex  Fields_8cpp__incl.md5  Fields_8hpp.tex  Fields_8hpp__dep__incl.md5  Fields_8hpp__incl.md5  Grid_8cpp.tex  Grid_8cpp__incl.md5  Grid_8hpp.tex  Grid_8hpp__dep__incl.md5  Grid_8hpp__incl.md5  LinearSys_8cpp.tex  LinearSys_8cpp__incl.md5  LinearSys_8hpp.tex  LinearSys_8hpp__dep__incl.md5  LinearSys_8hpp__incl.md5  MpiEnv_8cpp.tex  MpiEnv_8cpp__incl.md5  MpiEnv_8hpp.tex  MpiEnv_8hpp__dep__incl.md5  MpiEnv_8hpp__incl.md5  NSBSolver_8cpp.tex  NSBSolver_8cpp__incl.md5  NSBSolver_8hpp.tex  NSBSolver_8hpp__dep__incl.md5  NSBSolver_8hpp__incl.md5  SchurSequentialSolver_8cpp.tex  SchurSequentialSolver_8cpp__incl.md5  SchurSequentialSolver_8hpp.tex  SchurSequentialSolver_8hpp__dep__incl.md5  SchurSequentialSolver_8hpp__incl.md5  SimulationContext_8hpp.tex  SimulationContext_8hpp__dep__incl.md5  SimulationContext_8hpp__incl.md5  TridiagMat_8cpp.tex  TridiagMat_8cpp__incl.md5  TridiagMat_8hpp.tex  TridiagMat_8hpp__dep__incl.md5  TridiagMat_8hpp__incl.md5  VTKWriter_8cpp.tex  VTKWriter_8cpp__incl.md5  (+874 more)
include/: main.dox
include/core/: Fields.hpp  Functions.hpp  Grid.hpp  HaloHandler.hpp  Mesh.hpp  MpiEnv.hpp  TridiagMat.hpp  physicalField.hpp
include/io/: MuParserXAdapter.h  VTKWriter.hpp  inputReader.hpp  logWriter.hpp
include/numerics/: Derivatives.hpp  LinearSys.hpp  SchurNonOverlappingSolver.hpp  SchurSequentialSolver.hpp  SchurSolver.hpp  ThomasSolver.hpp  TridiagMat.hpp  derivatives.hpp  linearsys.hpp
include/simulation/: NSBSolver.hpp  NSBsolver.hpp  SimulationContext.hpp  SimulationData.hpp  initializer.hpp  pressureStep.hpp  viscousStep.hpp
results/: initial.vtk  step_0000.vtk  step_0001.vtk
scripts/: displayError.py  parallel_consistency_study.py  plotDone.py  plotProbe.py  plot_convergence.py  plot_convergence_new.py  run_convergence_study.py  run_convergence_study_new.py  strong_scalability_study.py  weak_scalability_study.py
src/: main.cpp
src/core/: Fields.cpp  Grid.cpp  HaloHandler.cpp  MpiEnv.cpp  TridiagMat.cpp
src/io/: VTKWriter.cpp  inputReader.cpp  logWriter.cpp
src/numerics/: Derivatives.cpp  LinearSys.cpp  SchurSequentialSolver.cpp  SchurSolver.cpp  ThomasSolver.cpp  TridiagMat.cpp  derivatives.cpp  derivativesOpt.cpp  linearsys.cpp
src/simulation/: NSBSolver.cpp  NSBsolver.cpp  initializer.cpp  pressureStep.cpp  viscousStep.cpp
tests/: MpiEnvFixture.hpp  main.cpp  test_derivatives.cpp  test_fields.cpp  test_grid.cpp  test_haloHandler.cpp  test_linearSys.cpp  test_pressureStep.cpp  test_schurNonOverlappingSolver.cpp  test_schurSolver.cpp  test_schurSolverPar.cpp  test_tridiag.cpp  test_viscousStep.cpp
tests/gradientTest/: derivatives.cpp  derivatives.hpp  initializer.cpp  main.cpp  physicalField.hpp  testReadme.txt
thomas/: thomas.cpp  thomas_test.cpp
